event + faucet test #5

--- a/faucet.html
+++ b/faucet.html
@@ -397,6 +397,10 @@
                 localStorage.setItem('goosebox_lang', lang);
                 updateLanguage(lang);
                 renderLanguageSelector();
+                
+                const button = document.getElementById('currentLang');
+                button.classList.add('scale-95');
+                setTimeout(() => button.classList.remove('scale-95'), 150);
             }
         }
 
@@ -1651,6 +1655,15 @@
                 checkAppKit();
             });
         }
+
+        document.addEventListener('keydown', function(e) {
+            if (e.key === 'Escape') {
+                const dropdown = document.querySelector('.group');
+                if (dropdown) {
+                    dropdown.classList.remove('group-hover:opacity-100', 'group-hover:visible', 'group-hover:scale-100');
+                }
+            }
+        });
 
         window.addEventListener('load', async () => {
             if (checkAndRedirectToFaucet()) {
