added patch note v1.1.4-beta

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
           <a href="#lucky-draw" class="hover:text-white" aria-label="Lucky Draw Event">Lucky Draw</a>
           <a href="#play" class="hover:text-white" data-lang="nav.play"></a>
           <a href="#faq" class="hover:text-white" data-lang="nav.faq"></a>
+          <a href="patch-notes.html" class="hover:text-white" aria-label="Patch Notes">📋 Patch Notes</a>
           
           <!-- 语言选择器 -->
           <div class="relative group">
@@ -109,6 +110,8 @@
       </div>
     </div>
   </header>
+
+
 
         <!-- Lucky Draw Promo -->
         <section id="lucky-draw" class="bg-gradient-to-br from-yellow-400 via-orange-500 to-red-500 text-white relative overflow-hidden">
